# fast-iterated-sums

./: .gitignore  LICENSE  Makefile  README.md  fis.py  grid.py  pyproject.toml  requirements.txt  run_sweep.sh  run_sweep_local_test.sh  train.py  train_helpers.py
commands/: classify.py  detect.py
configs/: config.yaml
configs/callbacks/: base.yaml  checkpoint.yaml  checkpoint_every.yaml  checkpoint_top3.yaml  log_cnn_images.yaml  log_fis_images.yaml  log_gamma_parameters.yaml  log_image_predictions.yaml  log_lambda_parameters.yaml  log_positional_encoding.yaml  rich.yaml  running_max_logger.yaml  wandb.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  fashion_mnist.yaml  mnist.yaml
configs/experiment/: base.yaml  fcn.yaml  fis_convnext-cifar10-adamw.yaml  fis_convnext-cifar100-adamw.yaml  fis_pure_mnist.yaml  fis_resnet20_L2-cifar10.yaml  fis_resnet20_L2_block_v2-cifar10.yaml  (+1 more)
kernels/: cumsum_1d.py  discounted_cumsum.py  scans_discounted_cummax.py  scans_discounted_cumsum.py  scans_undiscounted.py
pipelines/: __init__.py  analyse.py  clean.py  compare.py  hpsearch.py  robust.py  train.py
shared/: builders.py  defintions.py  discounted_sums.py  helpers.py  params.py  pe.py  plotter.py  sums.py
steps/: __init__.py  cleaner.py  etl.py  evaluator.py  models.py  trainer.py
sweep-configs/: fis_convnext-cifar10-adamw-baseline.yaml  fis_convnext-cifar10-adamw-fis-max.yaml  fis_convnext-cifar100-adamw-baseline.yaml  fis_convnext-cifar100-adamw-fis-max.yaml
tests/: fis_layer_fixed_tree_test.py  fis_layer_random_trees_test.py  sanity_tests.py  sums_test.py
(+67 files in other folders)
